<resources>
    <!--MAIN WINDOW-->
    <string name="app_name">UrbanGame</string>
    <string name="btn_createGame">Create Game</string>
    <string name="btn_playGame">Play Game</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_about">About</string>
    <string name="dialog_chooseCreatingMode_title">Creating urban game</string>
    <string name="dialog_chooseCreatingMode_msg">Choose creating mode, please.</string>
    <string name="dialog_chooseCreatingMode_btnClassic">Classic</string>
    <string name="dialog_chooseCreatingMode_btnRemote">Remote</string>
    <string name="btn_cancel">Cancel</string>
    <string name="preference_file_key">PREFERENCES</string>
    <string name="preference_sound">preference_sound</string>
    <string name="preference_vibration">preference_vibration</string>
    <string name="add_button">Add</string>


    <!--ABOUT ACTIVITY-->

    <string name="title_activity_about">About</string>
    <string name="authors">Game produced by:\nNatalia Jastrzębska,\nPaulina Wójcik,\nMarcin Proniakin oraz \nPrzemysław Lewandowski.</string>
    <string name="version">Version: 0.1</string>
    <string name="supervisor">Supervisor:\nPhD MEng Krzysztof Bikonis</string>
    <string name="rights">All rights reserved.</string>


    <!--SETTINGS ACTIVITY-->
    <string name="title_activity_settings">Settings</string>
    <string name="switch_vibrationOn">Enabled</string>
    <string name="switch_vibrationOff">Disabled</string>
    <string name="switch_vibrationHint">Notifications vibrations</string>
    <string name="switch_soundOn">Enabled</string>
    <string name="switch_soundOff">Disabled</string>
    <string name="switch_soundHint">Sound</string>
    <string name="title_activity_maps">Map</string>

    <!--GAME SETTINGS ACTIVITY-->
    <string name="title_activity_gameSettings">Game Settings</string>
    <string name="checkBox_enabledRPG">Role-playing game</string>
    <string name="checkBox_enabledDirection">Showing the direction during the game</string>
    <string name="textView_gameName">Name:</string>
    <string-array name="spinner_gameMode">
        <item>Game for time</item>
        <item>Game for points</item>
    </string-array>

    <!--CREATE REMOTE GAME ACTIVITY-->
    <string name="searchLocation_hint">Search location</string>
    <string name="saveGame_btn">Save game</string>
    <string name="tv_routeLength">Route Length: </string>

    <!--CREATE CLASSIC GAME ACTIVITY-->
    <string name="googleMap_marker_title">Your position</string>


    <!--PLAY GAME ACTICITY-->
    <string name="title_activity_play_game">Play Game</string>
    <string name="choose_game">Choose Game</string>
    <string name="btn_startGame">Start</string>


    <!--ENABLE INTERNET CONNECTION DIALOG-->
    <string name="dialog_enableInternet_title">NO INTERNET!</string>
    <string name="dialog_enableInternet_msg">Without Internet connection I am not able to display maps.\n
        Do You want to visit Settings and enable WiFi connection?</string>
    <string name="btn_ok">OK</string>

    <!--ENABLE GPS CONNECTION DIALOG-->
    <string name="dialog_enableGPS_title">NO GPS ACCESS</string>
    <string name="dialog_enableGPS_msg">Without GPS enabled I am not able to track Your position.\n
        Would You like to visit Settings and enable GPS tracking?</string>

    <!--TAKS TYPES-->
    <string name="task_thinkAndAnswer_name">Think and Answer</string>
    <string name="task_thinkAndAnswer_hint">You can write a question for player and provide proper answer.</string>
    <string name="task_lookAndAnswer_name">Look and Answer</string>
    <string name="task_lookAndAnswer_hint">You can upload an image, write a question and provide proper answer.</string>
    <string name="task_hearAndAnswer_name">Hear and Answer</string>
    <string name="task_hearAndAnswer_hint">You can upload a sound, write a question and provide proper answer.</string>
    <string name="task_watchAndAnswer_name">Watch and Answer</string>
    <string name="task_watchAndAnswer_hint">You can upload a video, write a question and provide proper answer.</string>
    <string name="task_findAndAnswer_name">Find and Answer</string>
    <string name="task_findAndAnswer_hint">You can upload an image and place it on a building using AR. You can write a question and provide proper answer.</string>
    <string name="task_game_name">Game</string>
    <string name="task_game_hint">You can let user to play game and score some points.</string>
    <string name="task_abcd_name">ABCD</string>
    <string name="task_abcd_hint">You can let user to choose one correct answer.</string>


    <string name="task_provideQuestion">Here should be your question.</string>
    <string name="task_provideAnswer">Here should be proper answer.</string>
    <string name="task_provideAnswerA">Answer A</string>
    <string name="task_provideAnswerB">Answer B</string>
    <string name="task_provideAnswerC">Answer C</string>
    <string name="task_provideAnswerD">Answer D</string>
    <string name="task_answerA_helper">A:</string>
    <string name="task_answerB_helper">B:</string>
    <string name="task_answerC_helper">C:</string>
    <string name="task_answerD_helper">D:</string>
    <string name="task_whatShouldAnswerBe">What answer should be?</string>
    <string name="task_answer_text">Text</string>
    <string name="task_answer_number">Number</string>
    <string name="task_answer_date">Date</string>
    <string name="task_ABCD_choose_correct_answer">Choose correct answer by tapping on A, B, C or D next to your answers.</string>
    <string name="task_ABCD_chooseCorrectMsg">Please choose correct answer</string>
    <string name="task_ABCD_correct_answer_is">Correct answer is:</string>

    <string name="task_add_button">Add task</string>
    <string name="task_choosePicture_button">Choose a picture</string>
    <string name="task_takePicture_button">Take a picture</string>

    <string name="dialog_choose_using_cardboard">Do you want to use cardboard?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <!--PLAYING-->
    <string name="dialog_displayHint_title">Hint</string>
    <string name="confirmAnswer">Confirm Answer</string>
    <string name="endGameTitle">Congratulations!</string>
    <string name="endGameMsg">You won!</string>
    <string name="endGameTime">Your time is:</string>
    <string name="endGameDistance">Distance is:</string>



    <string name="btn_saveGame">Save Game</string>
    <string name="btn_addPoint">Add Point</string>

    <string name="tv_point_name">Point Name:</string>
    <string name="et_point_name">ExampleName</string>
    <string name="tv_point_hint">Hint:</string>
    <string name="et_point_hint">Write your hint</string>
    <string name="tv_point_plot">Plot</string>
    <string name="et_point_plot">Put some plot here :)</string>

    <string name="tv_game_save">Congratulations you have created game!!!</string>
    <string name="et_author_name">Name</string>
    <string name="btn_save_to_file">Save to file</string>


    <string name="game_created">Game created!</string>

    <string name="answer_ok">Good answer!</string>
    <string name="answer_wrong">Wrong answer,try again!</string>
    <string name="answer_question">Answer question:</string>


</resources>
