<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nataliajastrzebska.urbangame.PointInformationSetupActivity"
    android:background="@drawable/back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_point_name"
        android:id="@+id/tv_point_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_point_hint"
        android:id="@+id/tv_point_hint"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/et_point_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_point_plot"
        android:id="@+id/tv_point_plot"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/et_point_hint"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_point_name"
        android:id="@+id/et_point_name"
        android:layout_below="@+id/tv_point_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_point_hint"
        android:id="@+id/et_point_hint"
        android:layout_below="@+id/tv_point_hint"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_point_plot"
        android:id="@+id/et_point_plot"
        android:layout_below="@+id/tv_point_plot"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:layout_below="@+id/et_point_plot"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:onClick="savePointInformation"/>

</RelativeLayout>
