<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/scrollView"
    android:background="@drawable/back"
    android:fillViewport="false">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_about"
    tools:context="com.example.nataliajastrzebska.urbangame.AboutActivity"
    android:weightSum="1">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authors"
            android:id="@+id/textView2"
            android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        android:layout_weight="13.73" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supervisor"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_weight="11.15" />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rights"
            android:id="@+id/textView3"
            android:layout_centerHorizontal="true"
        android:layout_weight="9.36" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:id="@+id/textView4"
            android:layout_weight="10.27" />






</LinearLayout>

</ScrollView>