<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nataliajastrzebska.urbangame.SaveGameActivity"
    android:background="@drawable/back">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_game_save"
        android:id="@+id/tv_save_game_to_file"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_author_name"
        android:layout_below="@+id/tv_save_game_to_file"
        android:layout_alignParentStart="true"
        android:layout_marginTop="88dp"
        android:text="@string/et_author_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_save_to_file"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:onClick="saveGameToFile"/>
</RelativeLayout>
