<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_activityMain_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#263276"
        android:textSize="50dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_activityMain_createGame"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/tv_activityMain_title"
        android:layout_alignStart="@+id/tv_activityMain_title"
        android:layout_below="@+id/tv_activityMain_title"
        android:layout_marginBottom="10px"
        android:background="@color/btnColor"
        android:onClick="createGameClicked"
        android:text="@string/btn_createGame"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_activityMain_playGame"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/tv_activityMain_title"
        android:layout_alignStart="@+id/tv_activityMain_title"
        android:layout_below="@+id/btn_activityMain_createGame"
        android:layout_marginBottom="10px"
        android:background="@color/btnColor"
        android:onClick="playGameClicked"
        android:text="@string/btn_playGame"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_activityMain_settings"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/tv_activityMain_title"
        android:layout_alignStart="@+id/tv_activityMain_title"
        android:layout_below="@+id/btn_activityMain_playGame"
        android:layout_marginBottom="10px"
        android:background="@color/btnColor"
        android:onClick="settingsClicked"
        android:text="@string/btn_settings"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_activityMain_about"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_alignEnd="@+id/tv_activityMain_title"
        android:layout_alignStart="@+id/tv_activityMain_title"
        android:layout_below="@+id/btn_activityMain_settings"
        android:layout_marginBottom="10px"
        android:background="@color/btnColor"
        android:onClick="aboutClicked"
        android:text="@string/btn_about"
        android:textSize="25dp"
        android:textStyle="bold" />


</RelativeLayout>
