<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.nataliajastrzebska.urbangame.createTaskActivites.TaskThinkAndAnswer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task_thinkAndAnswer_hint"
        android:id="@+id/tv_createThinkAndAnswerTask_hint"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_createThinkAndAnswerTask_addQuestion"
        android:layout_below="@+id/tv_createThinkAndAnswerTask_hint"
        android:layout_alignParentStart="true"
        android:hint="@string/task_provideQuestion"
        android:textSize="30dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_add_button"
        android:id="@+id/btn_createThinkAndAnswerTaskActivity_add"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
