<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:fillViewport="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nataliajastrzebska.urbangame.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66FFFFFF"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">


        <Switch
            android:id="@+id/switch_settings_enabledVibration"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="0"
            android:enabled="true"
            android:text="@string/switch_vibrationHint"
            android:textOff="@string/switch_vibrationOff"
            android:textOn="@string/switch_vibrationOn"
            android:textSize="12dp" />

        <Switch
            android:id="@+id/switch_settings_enabledSound"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_column="0"
            android:layout_row="1"
            android:enabled="true"
            android:text="@string/switch_soundHint"
            android:textOff="@string/switch_vibrationOff"
            android:textOn="@string/switch_vibrationOn"
            android:textSize="12dp" />

        <!-- TEST BUTTONS -->



        <Button
            android:id="@+id/settings_test_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:onClick="testSound2"
            android:text="Test2" />


        <Button
            android:id="@+id/settings_test_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="testVibrate"
            android:text="Test1" />


        <!-- END OF TEST BUTTONS -->

    </GridLayout>
</ScrollView>
